INTYGFV-16329: Minor refactoring. Added some unit tests and error handling.