@@ -9,6 +9,7 @@ import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.util.Collections;
 import java.util.List;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
@@ -34,287 +35,321 @@ class InMemoryCertificateModelRepositoryTest {
 
   private InMemoryCertificateModelRepository inMemoryCertificateModelRepository;
 
-  @Test
-  void shallReturnActiveCertificateModels() {
-    inMemoryCertificateModelRepository = new InMemoryCertificateModelRepository(
-        List.of(certificateModelFactoryOne)
-    );
+  @Nested
+  class FindAllActive {
 
-    final var expectedModel = CertificateModel.builder()
-        .id(
-            CertificateModelId.builder()
-                .type(new CertificateType(TYPE_ONE))
-                .version(new CertificateVersion(VERSION_ONE))
-                .build()
-        )
-        .activeFrom(LocalDateTime.now(ZoneId.systemDefault()).minusMinutes(1))
-        .build();
+    @Test
+    void shallReturnActiveCertificateModels() {
+      inMemoryCertificateModelRepository = new InMemoryCertificateModelRepository(
+          List.of(certificateModelFactoryOne)
+      );
 
-    doReturn(expectedModel).when(certificateModelFactoryOne).create();
+      final var expectedModel = CertificateModel.builder()
+          .id(
+              CertificateModelId.builder()
+                  .type(new CertificateType(TYPE_ONE))
+                  .version(new CertificateVersion(VERSION_ONE))
+                  .build()
+          )
+          .activeFrom(LocalDateTime.now(ZoneId.systemDefault()).minusMinutes(1))
+          .build();
 
-    final var actualModels = inMemoryCertificateModelRepository.findAllActive();
+      doReturn(expectedModel).when(certificateModelFactoryOne).create();
 
-    assertEquals(List.of(expectedModel), actualModels);
+      final var actualModels = inMemoryCertificateModelRepository.findAllActive();
+
+      assertEquals(List.of(expectedModel), actualModels);
+    }
+
+    @Test
+    void shallExcludeInactiveCertificateModels() {
+      inMemoryCertificateModelRepository = new InMemoryCertificateModelRepository(
+          List.of(certificateModelFactoryOne)
+      );
+
+      final var expectedModel = CertificateModel.builder()
+          .id(
+              CertificateModelId.builder()
+                  .type(new CertificateType(TYPE_ONE))
+                  .version(new CertificateVersion(VERSION_ONE))
+                  .build()
+          )
+          .activeFrom(LocalDateTime.now(ZoneId.systemDefault()).plusMinutes(1))
+          .build();
+
+      doReturn(expectedModel).when(certificateModelFactoryOne).create();
+
+      final var actualModels = inMemoryCertificateModelRepository.findAllActive();
+
+      assertEquals(Collections.emptyList(), actualModels);
+    }
+
+    @Test
+    void shallReturnListOfActiveCertificateModels() {
+      inMemoryCertificateModelRepository = new InMemoryCertificateModelRepository(
+          List.of(certificateModelFactoryOne, certificateModelFactoryTwo)
+      );
+
+      final var expectedModelOne = CertificateModel.builder()
+          .id(
+              CertificateModelId.builder()
+                  .type(new CertificateType(TYPE_ONE))
+                  .version(new CertificateVersion(VERSION_ONE))
+                  .build()
+          )
+          .activeFrom(LocalDateTime.now(ZoneId.systemDefault()).minusMinutes(1))
+          .build();
+
+      doReturn(expectedModelOne).when(certificateModelFactoryOne).create();
+
+      final var expectedModelTwo = CertificateModel.builder()
+          .id(
+              CertificateModelId.builder()
+                  .type(new CertificateType(TYPE_TWO))
+                  .version(new CertificateVersion(VERSION_ONE))
+                  .build()
+          )
+          .activeFrom(LocalDateTime.now(ZoneId.systemDefault()).minusMinutes(1))
+          .build();
+
+      doReturn(expectedModelTwo).when(certificateModelFactoryTwo).create();
+
+      final var actualModels = inMemoryCertificateModelRepository.findAllActive();
+
+      assertEquals(2, actualModels.size());
+      assertTrue(actualModels.contains(expectedModelOne),
+          "Expected model with id: %s".formatted(expectedModelOne.getId())
+      );
+      assertTrue(actualModels.contains(expectedModelTwo),
+          "Expected model with id: %s".formatted(expectedModelTwo.getId())
+      );
+    }
   }
 
-  @Test
-  void shallExcludeInactiveCertificateModels() {
-    inMemoryCertificateModelRepository = new InMemoryCertificateModelRepository(
-        List.of(certificateModelFactoryOne)
-    );
+  @Nested
+  class FindLatestActiveByType {
 
-    final var expectedModel = CertificateModel.builder()
-        .id(
-            CertificateModelId.builder()
-                .type(new CertificateType(TYPE_ONE))
-                .version(new CertificateVersion(VERSION_ONE))
-                .build()
-        )
-        .activeFrom(LocalDateTime.now(ZoneId.systemDefault()).plusMinutes(1))
-        .build();
+    @Test
+    void shallReturnCertificateModelIfActiveAndMatchType() {
+      inMemoryCertificateModelRepository = new InMemoryCertificateModelRepository(
+          List.of(certificateModelFactoryOne)
+      );
 
-    doReturn(expectedModel).when(certificateModelFactoryOne).create();
+      final var expectedModel = CertificateModel.builder()
+          .id(
+              CertificateModelId.builder()
+                  .type(new CertificateType(TYPE_ONE))
+                  .version(new CertificateVersion(VERSION_ONE))
+                  .build()
+          )
+          .activeFrom(LocalDateTime.now(ZoneId.systemDefault()).minusMinutes(1))
+          .build();
 
-    final var actualModels = inMemoryCertificateModelRepository.findAllActive();
+      doReturn(expectedModel).when(certificateModelFactoryOne).create();
 
-    assertEquals(Collections.emptyList(), actualModels);
+      final var actualModel = inMemoryCertificateModelRepository.findLatestActiveByType(
+          new CertificateType(TYPE_ONE));
+
+      assertEquals(expectedModel, actualModel.orElse(null));
+    }
+
+    @Test
+    void shallReturnEmptyIfNotActiveAndMatchType() {
+      inMemoryCertificateModelRepository = new InMemoryCertificateModelRepository(
+          List.of(certificateModelFactoryOne)
+      );
+
+      final var model = CertificateModel.builder()
+          .id(
+              CertificateModelId.builder()
+                  .type(new CertificateType(TYPE_ONE))
+                  .version(new CertificateVersion(VERSION_ONE))
+                  .build()
+          )
+          .activeFrom(LocalDateTime.now(ZoneId.systemDefault()).plusMinutes(1))
+          .build();
+
+      doReturn(model).when(certificateModelFactoryOne).create();
+
+      final var actualModel = inMemoryCertificateModelRepository.findLatestActiveByType(
+          new CertificateType(TYPE_ONE));
+
+      assertTrue(actualModel.isEmpty(),
+          () -> "Expect model to be empty but retured %s".formatted(actualModel.orElseThrow())
+      );
+    }
+
+    @Test
+    void shallReturnEmptyIfActiveAndDifferentType() {
+      inMemoryCertificateModelRepository = new InMemoryCertificateModelRepository(
+          List.of(certificateModelFactoryOne)
+      );
+
+      final var model = CertificateModel.builder()
+          .id(
+              CertificateModelId.builder()
+                  .type(new CertificateType(TYPE_TWO))
+                  .version(new CertificateVersion(VERSION_ONE))
+                  .build()
+          )
+          .activeFrom(LocalDateTime.now(ZoneId.systemDefault()).minusMinutes(1))
+          .build();
+
+      doReturn(model).when(certificateModelFactoryOne).create();
+
+      final var actualModel = inMemoryCertificateModelRepository.findLatestActiveByType(
+          new CertificateType(TYPE_ONE));
+
+      assertTrue(actualModel.isEmpty(),
+          () -> "Expect model to be empty but retured %s".formatted(actualModel.orElseThrow())
+      );
+    }
+
+    @Test
+    void shallReturnLatestCertificateModelIfActiveAndMatchType() {
+      inMemoryCertificateModelRepository = new InMemoryCertificateModelRepository(
+          List.of(certificateModelFactoryOne, certificateModelFactoryTwo)
+      );
+
+      final var modelOne = CertificateModel.builder()
+          .id(
+              CertificateModelId.builder()
+                  .type(new CertificateType(TYPE_ONE))
+                  .version(new CertificateVersion(VERSION_ONE))
+                  .build()
+          )
+          .activeFrom(LocalDateTime.now(ZoneId.systemDefault()).minusMinutes(5))
+          .build();
+
+      final var expectedModel = CertificateModel.builder()
+          .id(
+              CertificateModelId.builder()
+                  .type(new CertificateType(TYPE_ONE))
+                  .version(new CertificateVersion(VERSION_TWO))
+                  .build()
+          )
+          .activeFrom(LocalDateTime.now(ZoneId.systemDefault()).minusMinutes(1))
+          .build();
+
+      doReturn(modelOne).when(certificateModelFactoryOne).create();
+      doReturn(expectedModel).when(certificateModelFactoryTwo).create();
+
+      final var actualModel = inMemoryCertificateModelRepository.findLatestActiveByType(
+          new CertificateType(TYPE_ONE));
+
+      assertEquals(expectedModel, actualModel.orElse(null));
+    }
+
+    @Test
+    void shallThrowExceptionIfCertificateTypeIsNull() {
+      inMemoryCertificateModelRepository = new InMemoryCertificateModelRepository(
+          List.of(certificateModelFactoryOne)
+      );
+
+      assertThrows(IllegalArgumentException.class,
+          () -> inMemoryCertificateModelRepository.findLatestActiveByType(null)
+      );
+    }
   }
 
-  @Test
-  void shallReturnListOfActiveCertificateModels() {
-    inMemoryCertificateModelRepository = new InMemoryCertificateModelRepository(
-        List.of(certificateModelFactoryOne, certificateModelFactoryTwo)
-    );
+  @Nested
+  class GetById {
 
-    final var expectedModelOne = CertificateModel.builder()
-        .id(
-            CertificateModelId.builder()
-                .type(new CertificateType(TYPE_ONE))
-                .version(new CertificateVersion(VERSION_ONE))
-                .build()
-        )
-        .activeFrom(LocalDateTime.now(ZoneId.systemDefault()).minusMinutes(1))
-        .build();
+    @Test
+    void shallReturnCertificateModelIfIdExistsAndIsActive() {
+      inMemoryCertificateModelRepository = new InMemoryCertificateModelRepository(
+          List.of(certificateModelFactoryOne)
+      );
 
-    doReturn(expectedModelOne).when(certificateModelFactoryOne).create();
+      final var expectedModel = CertificateModel.builder()
+          .id(
+              CertificateModelId.builder()
+                  .type(new CertificateType(TYPE_ONE))
+                  .version(new CertificateVersion(VERSION_ONE))
+                  .build()
+          )
+          .activeFrom(LocalDateTime.now(ZoneId.systemDefault()).minusMinutes(1))
+          .build();
 
-    final var expectedModelTwo = CertificateModel.builder()
-        .id(
-            CertificateModelId.builder()
-                .type(new CertificateType(TYPE_TWO))
-                .version(new CertificateVersion(VERSION_ONE))
-                .build()
-        )
-        .activeFrom(LocalDateTime.now(ZoneId.systemDefault()).minusMinutes(1))
-        .build();
+      doReturn(expectedModel).when(certificateModelFactoryOne).create();
 
-    doReturn(expectedModelTwo).when(certificateModelFactoryTwo).create();
+      final var actualModel = inMemoryCertificateModelRepository.getById(expectedModel.getId());
 
-    final var actualModels = inMemoryCertificateModelRepository.findAllActive();
+      assertEquals(expectedModel, actualModel);
+    }
 
-    assertEquals(2, actualModels.size());
-    assertTrue(actualModels.contains(expectedModelOne),
-        "Expected model with id: %s".formatted(expectedModelOne.getId())
-    );
-    assertTrue(actualModels.contains(expectedModelTwo),
-        "Expected model with id: %s".formatted(expectedModelTwo.getId())
-    );
-  }
+    @Test
+    void shallThrowExceptionIfIdIsMissing() {
+      inMemoryCertificateModelRepository = new InMemoryCertificateModelRepository(
+          List.of(certificateModelFactoryOne)
+      );
 
-  @Test
-  void shallReturnCertificateModelIfActiveAndMatchType() {
-    inMemoryCertificateModelRepository = new InMemoryCertificateModelRepository(
-        List.of(certificateModelFactoryOne)
-    );
+      final var expectedModel = CertificateModel.builder()
+          .id(
+              CertificateModelId.builder()
+                  .type(new CertificateType(TYPE_ONE))
+                  .version(new CertificateVersion(VERSION_ONE))
+                  .build()
+          )
+          .activeFrom(LocalDateTime.now(ZoneId.systemDefault()).minusMinutes(1))
+          .build();
 
-    final var expectedModel = CertificateModel.builder()
-        .id(
-            CertificateModelId.builder()
-                .type(new CertificateType(TYPE_ONE))
-                .version(new CertificateVersion(VERSION_ONE))
-                .build()
-        )
-        .activeFrom(LocalDateTime.now(ZoneId.systemDefault()).minusMinutes(1))
-        .build();
+      doReturn(expectedModel).when(certificateModelFactoryOne).create();
 
-    doReturn(expectedModel).when(certificateModelFactoryOne).create();
+      final var certificateModelId = CertificateModelId.builder()
+          .type(new CertificateType(TYPE_TWO))
+          .version(new CertificateVersion(VERSION_ONE))
+          .build();
 
-    final var actualModel = inMemoryCertificateModelRepository.findLatestActiveByType(
-        new CertificateType(TYPE_ONE));
+      final var illegalStateException = assertThrows(IllegalStateException.class,
+          () -> inMemoryCertificateModelRepository.getById(certificateModelId)
+      );
 
-    assertEquals(expectedModel, actualModel.orElse(null));
-  }
+      assertEquals("CertificateModel missing: %s".formatted(certificateModelId),
+          illegalStateException.getMessage());
+    }
 
-  @Test
-  void shallReturnEmptyIfNotActiveAndMatchType() {
-    inMemoryCertificateModelRepository = new InMemoryCertificateModelRepository(
-        List.of(certificateModelFactoryOne)
-    );
+    @Test
+    void shallThrowExceptionIfCertificateModelNotActive() {
+      inMemoryCertificateModelRepository = new InMemoryCertificateModelRepository(
+          List.of(certificateModelFactoryOne)
+      );
 
-    final var model = CertificateModel.builder()
-        .id(
-            CertificateModelId.builder()
-                .type(new CertificateType(TYPE_ONE))
-                .version(new CertificateVersion(VERSION_ONE))
-                .build()
-        )
-        .activeFrom(LocalDateTime.now(ZoneId.systemDefault()).plusMinutes(1))
-        .build();
+      final var expectedModel = CertificateModel.builder()
+          .id(
+              CertificateModelId.builder()
+                  .type(new CertificateType(TYPE_ONE))
+                  .version(new CertificateVersion(VERSION_ONE))
+                  .build()
+          )
+          .activeFrom(LocalDateTime.now(ZoneId.systemDefault()).plusMinutes(1))
+          .build();
 
-    doReturn(model).when(certificateModelFactoryOne).create();
+      final var certificateModelId = expectedModel.getId();
 
-    final var actualModel = inMemoryCertificateModelRepository.findLatestActiveByType(
-        new CertificateType(TYPE_ONE));
+      doReturn(expectedModel).when(certificateModelFactoryOne).create();
 
-    assertTrue(actualModel.isEmpty(),
-        () -> "Expect model to be empty but retured %s".formatted(actualModel.orElseThrow())
-    );
-  }
+      final var illegalStateException = assertThrows(IllegalStateException.class,
+          () -> inMemoryCertificateModelRepository.getById(certificateModelId)
+      );
 
-  @Test
-  void shallReturnEmptyIfActiveAndDifferentType() {
-    inMemoryCertificateModelRepository = new InMemoryCertificateModelRepository(
-        List.of(certificateModelFactoryOne)
-    );
+      assertEquals(
+          "CertificateModel with id '%s' not active until '%s'".formatted(
+              expectedModel.getId(),
+              expectedModel.getActiveFrom()
+          ),
+          illegalStateException.getMessage());
+    }
 
-    final var model = CertificateModel.builder()
-        .id(
-            CertificateModelId.builder()
-                .type(new CertificateType(TYPE_TWO))
-                .version(new CertificateVersion(VERSION_ONE))
-                .build()
-        )
-        .activeFrom(LocalDateTime.now(ZoneId.systemDefault()).minusMinutes(1))
-        .build();
+    @Test
+    void shallThrowExceptionIfCertificateModelIdIsNull() {
+      inMemoryCertificateModelRepository = new InMemoryCertificateModelRepository(
+          List.of(certificateModelFactoryOne)
+      );
 
-    doReturn(model).when(certificateModelFactoryOne).create();
-
-    final var actualModel = inMemoryCertificateModelRepository.findLatestActiveByType(
-        new CertificateType(TYPE_ONE));
-
-    assertTrue(actualModel.isEmpty(),
-        () -> "Expect model to be empty but retured %s".formatted(actualModel.orElseThrow())
-    );
-  }
-
-  @Test
-  void shallReturnLatestCertificateModelIfActiveAndMatchType() {
-    inMemoryCertificateModelRepository = new InMemoryCertificateModelRepository(
-        List.of(certificateModelFactoryOne, certificateModelFactoryTwo)
-    );
-
-    final var modelOne = CertificateModel.builder()
-        .id(
-            CertificateModelId.builder()
-                .type(new CertificateType(TYPE_ONE))
-                .version(new CertificateVersion(VERSION_ONE))
-                .build()
-        )
-        .activeFrom(LocalDateTime.now(ZoneId.systemDefault()).minusMinutes(5))
-        .build();
-
-    final var expectedModel = CertificateModel.builder()
-        .id(
-            CertificateModelId.builder()
-                .type(new CertificateType(TYPE_ONE))
-                .version(new CertificateVersion(VERSION_TWO))
-                .build()
-        )
-        .activeFrom(LocalDateTime.now(ZoneId.systemDefault()).minusMinutes(1))
-        .build();
-
-    doReturn(modelOne).when(certificateModelFactoryOne).create();
-    doReturn(expectedModel).when(certificateModelFactoryTwo).create();
-
-    final var actualModel = inMemoryCertificateModelRepository.findLatestActiveByType(
-        new CertificateType(TYPE_ONE));
-
-    assertEquals(expectedModel, actualModel.orElse(null));
-  }
-
-  @Test
-  void shallReturnCertificateModelIfIdExistsAndIsActive() {
-    inMemoryCertificateModelRepository = new InMemoryCertificateModelRepository(
-        List.of(certificateModelFactoryOne)
-    );
-
-    final var expectedModel = CertificateModel.builder()
-        .id(
-            CertificateModelId.builder()
-                .type(new CertificateType(TYPE_ONE))
-                .version(new CertificateVersion(VERSION_ONE))
-                .build()
-        )
-        .activeFrom(LocalDateTime.now(ZoneId.systemDefault()).minusMinutes(1))
-        .build();
-
-    doReturn(expectedModel).when(certificateModelFactoryOne).create();
-
-    final var actualModel = inMemoryCertificateModelRepository.getById(expectedModel.getId());
-
-    assertEquals(expectedModel, actualModel);
-  }
-
-  @Test
-  void shallThrowExceptionIfIdIsMissing() {
-    inMemoryCertificateModelRepository = new InMemoryCertificateModelRepository(
-        List.of(certificateModelFactoryOne)
-    );
-
-    final var expectedModel = CertificateModel.builder()
-        .id(
-            CertificateModelId.builder()
-                .type(new CertificateType(TYPE_ONE))
-                .version(new CertificateVersion(VERSION_ONE))
-                .build()
-        )
-        .activeFrom(LocalDateTime.now(ZoneId.systemDefault()).minusMinutes(1))
-        .build();
-
-    doReturn(expectedModel).when(certificateModelFactoryOne).create();
-
-    final var certificateModelId = CertificateModelId.builder()
-        .type(new CertificateType(TYPE_TWO))
-        .version(new CertificateVersion(VERSION_ONE))
-        .build();
-
-    final var illegalStateException = assertThrows(IllegalStateException.class,
-        () -> inMemoryCertificateModelRepository.getById(certificateModelId)
-    );
-
-    assertEquals("CertificateModel missing: %s".formatted(certificateModelId),
-        illegalStateException.getMessage());
-  }
-
-  @Test
-  void shallThrowExceptionIfCertificateModelNotActive() {
-    inMemoryCertificateModelRepository = new InMemoryCertificateModelRepository(
-        List.of(certificateModelFactoryOne)
-    );
-
-    final var expectedModel = CertificateModel.builder()
-        .id(
-            CertificateModelId.builder()
-                .type(new CertificateType(TYPE_ONE))
-                .version(new CertificateVersion(VERSION_ONE))
-                .build()
-        )
-        .activeFrom(LocalDateTime.now(ZoneId.systemDefault()).plusMinutes(1))
-        .build();
-
-    final var certificateModelId = expectedModel.getId();
-
-    doReturn(expectedModel).when(certificateModelFactoryOne).create();
-
-    final var illegalStateException = assertThrows(IllegalStateException.class,
-        () -> inMemoryCertificateModelRepository.getById(certificateModelId)
-    );
-
-    assertEquals(
-        "CertificateModel with id '%s' not active until '%s'".formatted(
-            expectedModel.getId(),
-            expectedModel.getActiveFrom()
-        ),
-        illegalStateException.getMessage());
+      assertThrows(IllegalArgumentException.class,
+          () -> inMemoryCertificateModelRepository.getById(null)
+      );
+    }
   }
 }
